curriculum/phase10/v32/CONTENTS.md
# v32 Contents

Authoring status: authored

## Start Here

- Introduction: [introduction.md](introduction.md)
- Main lesson: [notes.md](notes.md)
- Lab: [lab.md](lab.md)

## Topic Jumps

- Runbook: [runbook.md](runbook.md)
- Benchmark: [benchmark.md](benchmark.md)
- Failure story: [failure-story.md](failure-story.md)
- Summary notes: [summarynotes.md](summarynotes.md)
- Looking forward: [looking-forward.md](looking-forward.md)
- v33 bridge: [next-version-bridge.md](next-version-bridge.md)

## Self-Paced Path

1. Read the introduction.
2. Read the main lesson.
3. Inspect `frontier/aois-p/edge-offline-inference.plan.json`.
4. Run the validator.
5. Run the simulator.
6. Complete the lab.
7. Read the runbook and failure story.
8. Review summary notes.
9. Read the bridge into v33 adversarial testing and red teaming.
<!-- AOIS-NAV-START -->
---

## Navigation

- Reading order: [AOIS Reading Order](../../READING-ORDER.md)
- Previous: [v31 Next Version Bridge](../v31/next-version-bridge.md)
- Next: [v32 Introduction](introduction.md)
<!-- AOIS-NAV-END -->
